--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -20698,3 +20698,60 @@ input[type='button'].btn-block {
   top: 16px !important;
   width: 32px !important;
 }
+
+/*! PROGRESSBAR */
+.progress-bar-bottom-alt {
+  -webkit-box-flex: 1 !important;
+  -ms-flex-positive: 1 !important;
+  overflow-x: hidden !important;
+  height: 2px !important;
+  background-color: #ebebeb !important;
+  border-radius: 2px !important;
+  -webkit-flex-grow: 1 !important;
+  flex-grow: 1 !important;
+}
+.progress-bar-bottom-alt__bar {
+  position: relative !important;
+  width: 100% !important;
+  left: -100% !important;
+  height: 100% !important;
+  border-radius: 2px !important;
+  background: #000 !important;
+}
+.progress-bar-top {
+  display: flex !important;
+  width: 100% !important;
+  background-color: #ddd !important;
+}
+.progress-bar-top__bar {
+  height: 2px !important;
+  background-color: #222 !important;
+}
+.progress-bar-bottom {
+  position: fixed !important;
+  bottom: 80px !important;
+  left: 0 !important;
+  right: 0 !important;
+  z-index: 11 !important;
+}
+.progress-bar-bottom__inner {
+  height: 2px !important;
+  overflow: hidden !important;
+  position: relative !important;
+  width: 100% !important;
+}
+.progress-bar-bottom__bar {
+  width: 100% !important;
+  height: 100% !important;
+  left: 0 !important;
+  position: absolute !important;
+  top: 0 !important;
+  -webkit-transform-origin: 0 50% !important;
+  -ms-transform-origin: 0 50% !important;
+  transform-origin: 0 50% !important;
+  -webkit-transition: -webkit-transform 0.5s, transform 0.5s !important;
+  -moz-transition: transform 0.5s !important;
+  transition: -ms-transform 0.5s, -webkit-transform 0.5s, transform 0.5s !important;
+  will-change: transform !important;
+  background: #222 !important;
+}
